--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,6 +1,3 @@
-<div style="height: 400px;">
-
-</div>
 <div class="app-footer">
 <!-- Remove the container if you want to extend the Footer to full width. -->
 <div class="container my-2">
@@ -14,12 +11,12 @@
           <div class="row text-center d-flex justify-content-center pt-2">
             <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="text-white">About us</a>
+                <a routerLink="/about-us" class="text-white">About us</a>
               </h6>
             </div>
             <div class="col-md-2">
               <h6 class="text-uppercase font-weight-bold">
-                <a href="#!" class="text-white">Products</a>
+                <a routerLink="/profile" class="text-white">Profile</a>
               </h6>
             </div>
             <div class="col-md-2">
