--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -37,7 +37,7 @@
             <a class="a-tags">Deals</a>
           </div>
           <div class="ion-text-center single-menu-item pizza selected">
-            <a class="a-tags">Pizza</a>
+            <a routerLink="/pizza" class="a-tags">Pizza</a>
           </div>
           <div class="ion-text-center single-menu-item starters">
             <a class="a-tags">Starters</a>
