--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -31,6 +31,9 @@
       <div class="tabs-nav-head ">
         <div class="menu-container container" flex="" id="showcase">
           <div class="ion-text-center single-menu-item melts">
+            <a class="a-tags" routerLink="/home">Home</a>
+          </div>
+          <div class="ion-text-center single-menu-item melts">
             <a class="a-tags">Melts</a>
           </div>
           <div class="ion-text-center single-menu-item deals">
