--- a/src/app/Components/products/products.component.html
+++ b/src/app/Components/products/products.component.html
@@ -7,7 +7,7 @@
                 <h2>POPULAR PRODUCTS</h2>
             </div>
             <div class="col-4 text-end viewAll-1">
-                <a class="viewAll" routerLink="/viewAll">View ALL
+                <a class="viewAll" routerLink="/pizza">View ALL
                    <div class="d-inline icon">
                     <i class="fa-solid fa-greater-than fa-xs"></i>
                    </div>
@@ -17,30 +17,88 @@
         <!-- --------------------Ahmed--------------------------------- -->
         <div class="coponents my-3">
             <div class="container row justify-content-between  ">
-                <div class="card col-2" style="width: 18rem;">
+                <div class="card col-3 my-3">
+                    <div class="parent text-center">  <!-- Added text-center -->
+                      <img src="assets\Images\Pizza\Chicken BBQ.png" class="w-75 child" />
+                        <div>
+                          <div class="d-flex justify-content-start align-items-end h-100">
+                            <h5><span class="badge bg-primary ms-2">New</span></h5>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title mb-3 text-reset">Chicken BBQ</h5>
+                        <p class="text-reset">Grilled Chicken & Onions Loaded On BBQ Base</p>
+                      <h5>Medium | Pan</h5>
+                      <h6 class="mb-3">EGP 154.99</h6>
+                      <div class="d-flex justify-content-around">
+                        <div><button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button></div>
+                        <p class="fs-4">5</p>
+                        <div><button class="btn btn-success"><i class="fa-solid fa-plus"></i></button></div>
+                      </div>
+                    </div>
+                  </div>
+                
+                <!-- <div class="card col-2" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
-                </div>
-                <div class="card col-2" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div> -->
+
+                <!--  -->
+
+                <div class="card col-3 my-3">
+                    <div class="parent text-center">  <!-- Added text-center -->
+                      <img src="assets\Images\Pizza\Chicken Supreme.png" class="w-75 child" />
+                        <div>
+                          <div class="d-flex justify-content-start align-items-end h-100">
+                            <h5><span class="badge bg-primary ms-2">New</span></h5>
+                          </div>
+                        </div>
                     </div>
-                </div>
-                <div class="card col-2" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title mb-3 text-reset">Chicken Supreme</h5>
+                        <p class="text-reset">The ultimate mix of Chicken together with Mus</p>
+                      <h5>Small | Pan</h5>
+                      <h6 class="mb-3">EGP 121.00</h6>
+                      <div class="d-flex justify-content-around">
+                        <div><button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button></div>
+                        <p class="fs-4">5</p>
+                        <div><button class="btn btn-success"><i class="fa-solid fa-plus"></i></button></div>
+                      </div>
                     </div>
-                </div>
+                  </div>
+                
+                  <!--  -->
+
+                  <div class="card col-3 my-3">
+                    <div class="parent text-center">  <!-- Added text-center -->
+                      <img src="assets\Images\Pizza\Original Chicken.png" class="w-75 child" />
+                        <div>
+                          <div class="d-flex justify-content-start align-items-end h-100">
+                            <h5><span class="badge bg-primary ms-2">New</span></h5>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title mb-3 text-reset">Original Chicken</h5>
+                        <p class="text-reset">Ranch base sauce with grilled chicken, mushro</p>
+                      <h5>Medium | Pan</h5>
+                      <h6 class="mb-3">EGP 195.00</h6>
+                      <div class="d-flex justify-content-around">
+                        <div><button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button></div>
+                        <p class="fs-4">5</p>
+                        <div><button class="btn btn-success"><i class="fa-solid fa-plus"></i></button></div>
+                      </div>
+                    </div>
+                  </div>
+                
+
+
+
                 <div class="card col-2 opacity-0">
 
                 </div>
