--- a/src/app/Components/product-card/product-card.component.html
+++ b/src/app/Components/product-card/product-card.component.html
@@ -1,6 +1,6 @@
 
 <div class="card">
-    <div class="parent">
+    <div class="parent text-center">  <!-- Added text-center -->
       <img src="{{user.Image}}" class="w-75 child" />
         <div>
           <div class="d-flex justify-content-start align-items-end h-100">
