--- a/src/app/Components/products/products.component.css
+++ b/src/app/Components/products/products.component.css
@@ -45,3 +45,15 @@ h2{
     background-color: rgba(0, 0, 0, 0.432);
 
 }
+
+
+/* products hover */
+
+.child
+{
+transition: all 1.1s;
+}
+.parent:hover .child
+{
+    transform: scale(1.2);
+}
