--- a/src/app/Components/carousel/carousel.component.html
+++ b/src/app/Components/carousel/carousel.component.html
@@ -5,16 +5,16 @@
         <div id="carouselExampleAutoplaying" class="carousel slide slide-show" data-bs-ride="carousel">
             <div class="carousel-inner slide-show-inner">
                 <div class="carousel-item active">
-                    <img src="../../../assets/Images/Ranch-BOX-990x330-EN-chain.jpg" class="d-block w-100" alt="...">
+                    <img src="../../../assets/Images/4.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="../../../assets/Images/New-My-Box-Website-Banner-990x330-Eng.jpg" class="d-block w-100" alt="...">
+                    <img src="../../../assets/Images/36.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="../../../assets/Images/Double-deal-990x330-eng-chain.jpg" class="d-block w-100" alt="...">
+                    <img src="../../../assets/Images/65.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="../../../assets/Images/Double-deal-990x330-eng-chain.jpg" class="d-block w-100" alt="...">
+                    <img src="../../../assets/Images/41.png" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev button1" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
