--- a/src/app/Components/products/products.component.html
+++ b/src/app/Components/products/products.component.html
@@ -1,18 +1,23 @@
 <div class="first-div">
-    <div class="container">
-        <div class="bar row justify-content-between">
-            <div class="col-4 opacity-0">
+    <div class="container-lg ">
+        <div class="d-none d-lg-block">
+            <div class="bar row justify-content-between">
+                <div class="col-4 opacity-0">
+                </div>
+                <div class="tilte col-4">
+                    <h2>POPULAR PRODUCTS</h2>
+                </div>
+                <div class="col-4 text-end viewAll-1">
+                    <a class="viewAll" routerLink="/pizza">View ALL
+                       <div class="d-inline icon">
+                        <i class="fa-solid fa-greater-than fa-xs"></i>
+                       </div>
+                    </a>
+                </div>
             </div>
-            <div class="tilte col-4">
-                <h2>POPULAR PRODUCTS</h2>
-            </div>
-            <div class="col-4 text-end viewAll-1">
-                <a class="viewAll" routerLink="/pizza">View ALL
-                   <div class="d-inline icon">
-                    <i class="fa-solid fa-greater-than fa-xs"></i>
-                   </div>
-                </a>
-            </div>
+        </div>
+        <div class="bar row justify-content-between d-block d-lg-none ">
+            <h2 class="h2">Our Popular Pizza's</h2>
         </div>
         <!-- --------------------Ahmed--------------------------------- -->
         <div class="coponents my-3">
@@ -38,7 +43,7 @@
                       </div>
                     </div>
                   </div>
-                
+               
                 <!-- <div class="card col-2" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
@@ -47,9 +52,9 @@
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div> -->
-
+ 
                 <!--  -->
-
+ 
                 <div class="card col-3 my-3">
                     <div class="parent text-center">  <!-- Added text-center -->
                       <img src="assets\Images\Pizza\Chicken Supreme.png" class="w-75 child" />
@@ -71,9 +76,9 @@
                       </div>
                     </div>
                   </div>
-                
+               
                   <!--  -->
-
+ 
                   <div class="card col-3 my-3">
                     <div class="parent text-center">  <!-- Added text-center -->
                       <img src="assets\Images\Pizza\Original Chicken.png" class="w-75 child" />
@@ -95,12 +100,12 @@
                       </div>
                     </div>
                   </div>
-                
-
-
-
+               
+ 
+ 
+ 
                 <div class="card col-2 opacity-0">
-
+ 
                 </div>
             </div>
         </div>
