--- a/src/app/Components/header/header.component.css
+++ b/src/app/Components/header/header.component.css
@@ -13,6 +13,7 @@
       background-color: #333;
       padding-top: 20px;
       transition: left 0.0s ease;
+      z-index: 1;
     }
   
     .menu-container {
