--- a/src/app/Components/download/download.component.html
+++ b/src/app/Components/download/download.component.html
@@ -1,13 +1,13 @@
-<div class="finalSection container">
+<div class="finalSection ">
 
     <!-- Logo -->
     <div class="pizzaHutLogo">
-        <img class="logoimg" src="../../../assets/Images/pizzahutLogo-en.png" alt="Pizza Hut Logo">
+        <img class="logoimg" src="../../../assets/Images/Pizza-logo-design-template-Vector-PNG.png" alt="Pizza Hut Logo">
     </div>
 
     <!-- Content -->
-    <h3>TRY OUR NEW PIZZA HUT</h3>
-    <p>Introducing the all new “Pizza hut Egypt” app for easy ordering and great exclusive deals.</p>
+    <h3>TRY OUR NEW PIZZA</h3>
+    <p>Introducing the all new “Pizza Egypt” app for easy ordering and great exclusive deals.</p>
 
     <!-- Download Buttons -->
     <div class="downloadButtons">
