--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-12">
+    <div class="col-12 caro">
         <!-- Appear at large screens only -->
         <div class="d-none d-lg-block">
             <app-carousel></app-carousel>
@@ -19,7 +19,7 @@
     <div class="col-12">
         <!-- Appear at large screens only -->
         <div class="d-none d-lg-block">
-            <app-download></app-download>~
+            <app-download></app-download>
         </div>
         <!-- Appear at medium to small screens -->
         <div class="d-block d-lg-none">
