--- a/src/app/Components/product-card/product-card.component.html
+++ b/src/app/Components/product-card/product-card.component.html
@@ -1,5 +1,5 @@
 
-<div class="card">
+<div class="mycard card">
     <div class="parent text-center">  <!-- Added text-center -->
       <img src="{{user.Image}}" class="w-75 child" />
         <div>
