--- a/src/app/Components/products/products.component.css
+++ b/src/app/Components/products/products.component.css
@@ -63,3 +63,9 @@ transition: all 1.1s;
 {
     transform: scale(1.2);
 }
+
+
+.mycard{
+    border: none;
+    box-shadow: -3px 4px 5px rgba(0, 0, 0, 0.45);
+}
