--- a/src/app/Components/products/products.component.html
+++ b/src/app/Components/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="first-div">
-    <div class="container-lg ">
+    <div class="container-lg py-2 ">
         <div class="d-none d-lg-block">
             <div class="bar row justify-content-between">
                 <div class="col-4 opacity-0">
@@ -20,9 +20,9 @@
             <h2 class="h2">Our Popular Pizza's</h2>
         </div>
         <!-- --------------------Ahmed--------------------------------- -->
-        <div class="coponents my-3">
-            <div class="container row justify-content-between  ">
-                <div class="card col-3 my-3">
+        <div class="coponents my-3 mx-3 py-5">
+            <div class="row justify-content-between ">
+                <div class="mycard m-auto my-md-3 card col-lg-3 col-md-5 col-8 my-3">
                     <div class="parent text-center">  <!-- Added text-center -->
                       <img src="assets\Images\Pizza\Chicken BBQ.png" class="w-75 child" />
                         <div>
@@ -55,7 +55,7 @@
  
                 <!--  -->
  
-                <div class="card col-3 my-3">
+                <div class=" mycard m-auto my-md-3 card col-lg-3 col-md-5 col-8 my-3">
                     <div class="parent text-center">  <!-- Added text-center -->
                       <img src="assets\Images\Pizza\Chicken Supreme.png" class="w-75 child" />
                         <div>
@@ -79,7 +79,7 @@
                
                   <!--  -->
  
-                  <div class="card col-3 my-3">
+                  <div class="mycard m-auto  my-md-3 card col-lg-3 col-md-5 col-8 my-3 ">
                     <div class="parent text-center">  <!-- Added text-center -->
                       <img src="assets\Images\Pizza\Original Chicken.png" class="w-75 child" />
                         <div>
@@ -104,7 +104,7 @@
  
  
  
-                <div class="card col-2 opacity-0">
+                <div class="card col-2 opacity-0 d-none d-lg-block ">
  
                 </div>
             </div>
